<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="cop_4331c.gather.name_event"
    android:id="@+id/name_event_layout">

    <EditText
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:id="@+id/txtEventTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:hint="@string/enter_name"
        android:inputType="textCapWords"
        android:editable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/or"
        android:id="@+id/textView3"
        android:layout_below="@+id/txtEventTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/creator_name"
        android:ems="10"
        android:id="@+id/creator_name"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:editable="true" />

    <Spinner
        android:id="@+id/event_type"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/creator_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:layout_alignRight="@+id/txtEventTitle"
        android:layout_alignEnd="@+id/txtEventTitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name_preview"
        android:id="@+id/name_preview"
        android:layout_below="@+id/event_type"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_name_button"
        android:layout_alignTop="@+id/txtEventTitle"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/preview"
        android:onClick="previewUserName"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/submit_name"
        android:id="@+id/submit_name"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true" />
        <!--android:onClick="saveChanges" -->

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rand_name_button"
        android:text="@string/preview"
        android:layout_alignTop="@+id/event_type"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="previewRandomName"/>

</RelativeLayout>
