<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@drawable/login2"
    tools:context=".WelcomeActivity"
    android:id="@+id/Welcome">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:id="@+id/button1"
        android:layout_gravity="start|bottom"
        android:onClick="signIn" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:id="@+id/button2"
        android:layout_gravity="end|bottom"
        android:onClick="signUp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome_message"
        android:id="@+id/textView"
        android:layout_gravity="center"
        android:textColor="#ffcacaca"
        android:textSize="38sp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Publish Event"
        android:id="@+id/test_button"
        android:layout_gravity="right|bottom"
        android:onClick="publishEventTest"
        android:layout_marginBottom="100dp"/>

</FrameLayout>
