<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="cop_4331c.gather.util.Edit_Account_Info"
    android:id="@+id/Account"
    android:background="#ff676767">


    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/new_username"
        android:layout_marginTop="40dp"
        android:text="@string/prompt_username"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="text" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:id="@+id/update_user"
        android:layout_alignBottom="@+id/new_username"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/new_password"
        android:text="@string/prompt_password"
        android:inputType="text"
        android:layout_below="@+id/new_username"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:id="@+id/update_password"
        android:layout_alignBottom="@+id/new_password"
        android:layout_alignLeft="@+id/update_user"
        android:layout_alignStart="@+id/update_user" />

    <EditText
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/new_first_name"
        android:text="@string/prompt_first_name"
        android:layout_below="@+id/new_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:id="@+id/update_name"
        android:layout_alignBottom="@+id/new_first_name"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/new_last_name"
        android:text="@string/prompt_last_name"
        android:layout_alignTop="@+id/new_first_name"
        android:layout_toRightOf="@+id/new_password"
        android:layout_toEndOf="@+id/new_password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/new_phone"
        android:layout_below="@+id/new_first_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:text="@string/prompt_phone_number" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:id="@+id/update_phone"
        android:layout_alignBottom="@+id/new_phone"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/new_email"
        android:layout_below="@+id/new_phone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:text="@string/prompt_email" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:id="@+id/update_email"
        android:layout_alignBottom="@+id/new_email"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        android:id="@+id/return_post_sign_in"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:onClick="postSignIn"/>

</RelativeLayout>
