<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="cop_4331c.gather.SignInActivity"
    android:id="@+id/signInActivity">

    <ScrollView
        android:id="@+id/scrollViewLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="200dp"
        android:layout_centerInParent="true">

        <LinearLayout
            android:id="@+id/linearLayoutLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <AutoCompleteTextView
                android:id="@+id/textEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_username"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/textPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@integer/abc_max_action_buttons"
                android:imeActionLabel="@string/sign_in"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <Button
                style="?android:textAppearanceSmall"
                android:id="@+id/buttonSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/sign_in"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>