<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="cop_4331c.gather.new_features_list"
    android:id="@+id/features_list_layout"
    android:background="#000000">



    <ImageView
        android:layout_width="186dp"
        android:layout_height="116dp"
        android:layout_marginTop="40dp"
        android:id="@+id/imageView"
        android:background="@drawable/feature_name"
        android:alpha=".8"
        android:contentDescription="@string/name_event"
        android:layout_below="@+id/txtEventTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:clickable="true"
        android:onClick="nameEventActivity"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:id="@+id/txtEventTitle"
        android:layout_gravity="top"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_centerHorizontal="true"
        android:textSize="30sp" />

    <ImageView
        android:layout_width="186dp"
        android:layout_height="116dp"
        android:id="@+id/imageView2"
        android:layout_gravity="right|top"
        android:background="@drawable/feature_venue"
        android:alpha=".8"
        android:contentDescription="@string/pick_venue"
        android:layout_alignTop="@+id/imageView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        android:adjustViewBounds="false" />

    <ImageView
        android:layout_width="186dp"
        android:layout_height="116dp"
        android:id="@+id/imageView3"
        android:layout_gravity="left|center_vertical"
        android:background="@drawable/feature_invite"
        android:alpha=".8"
        android:contentDescription="@string/send_invites"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="80dp"
        android:clickable="true" />

    <ImageButton
        android:layout_width="186dp"
        android:layout_height="116dp"
        android:id="@+id/imageButton"
        android:layout_gravity="right|center_vertical"
        android:background="@drawable/feature_music"
        android:alpha=".8"
        android:contentDescription="@string/create_playlist"
        android:layout_alignTop="@+id/imageView3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:clickable="true" />

    <ImageButton
        android:layout_width="186dp"
        android:layout_height="116dp"
        android:id="@+id/imageButton2"
        android:layout_gravity="left|bottom"
        android:background="@drawable/progress_icon"
        android:alpha=".8"
        android:layout_below="@+id/imageView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="80dp"
        android:clickable="true"
        android:contentDescription="@string/send_message"
        android:adjustViewBounds="false" />

    <ImageButton
        android:layout_width="186dp"
        android:layout_height="116dp"
        android:id="@+id/imageButton3"
        android:layout_gravity="right|bottom"
        android:background="@drawable/feature_posting"
        android:alpha=".8"
        android:contentDescription="@string/post_photos"
        android:layout_alignTop="@+id/imageButton2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        android:onClick="PublishActivity"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name_event"
        android:textColor="#FFFFFF"
        android:id="@+id/textView3"
        android:layout_gravity="left"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/pick_venue"
        android:textColor="#FFFFFF"
        android:id="@+id/textView4"
        android:layout_gravity="right"
        android:layout_below="@+id/imageView"
        android:layout_alignLeft="@+id/imageView2"
        android:layout_alignStart="@+id/imageView2"
        android:layout_marginLeft="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/send_invites"
        android:textColor="#FFFFFF"
        android:id="@+id/textView5"
        android:layout_gravity="left"
        android:layout_below="@+id/imageView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/create_playlist"
        android:textColor="#FFFFFF"
        android:id="@+id/textView6"
        android:layout_gravity="right"
        android:layout_below="@+id/imageView3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/send_message"
        android:textColor="#FFFFFF"
        android:id="@+id/textView7"
        android:layout_gravity="left|bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_below="@+id/imageButton2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/post_photos"
        android:textColor="#FFFFFF"
        android:id="@+id/textView8"
        android:layout_gravity="right"
        android:layout_below="@+id/imageButton3"
        android:layout_alignLeft="@+id/imageButton3"
        android:layout_alignStart="@+id/imageButton3"
        android:layout_marginLeft="30dp" />

</RelativeLayout>
